# paraview-monitoring-tools

./: README.md  build_all_plugins.sh
Common/src/: AutoReadKafkaPropertyWidget.cxx  AutoReadKafkaPropertyWidget.h  AutoUpdateRenderPropertyWidget.cxx  AutoUpdateRenderPropertyWidget.h  UpdateRenderPropertyWidget.cxx  UpdateRenderPropertyWidget.h
DssVtiMaterialVolumesFiltered/: CMakeLists.txt
DssVtiMaterialVolumesFiltered/src/: DssVtiMaterialVolumesFiltered.cxx  DssVtiMaterialVolumesFiltered.h
DssVtiMaterialVolumesFiltered/src/xml/: DssVtiMaterialVolumesFiltered.xml
DssVtpAnomalyVolumesClassified/: CMakeLists.txt
DssVtpAnomalyVolumesClassified/src/: DssVtpAnomalyVolumesClassified.cxx  DssVtpAnomalyVolumesClassified.h
DssVtpAnomalyVolumesClassified/src/xml/: DssVtpAnomalyVolumesClassified.xml
DssVtpGammaVolumesDetected/: CMakeLists.txt
DssVtpGammaVolumesDetected/src/: ConnectToVTPGammaDetected.h  DssVtpGammaVolumesDetected.cxx  DssVtpGammaVolumesDetected.h
DssVtpGammaVolumesDetected/src/xml/: DssVtpGammaVolumesDetected.xml
DssVtpHighzVolumesClassified/: CMakeLists.txt
DssVtpHighzVolumesClassified/src/: ConnectToVTPHighzVolumesClassified.h  DssVtpHighzVolumesClassified.cxx  DssVtpHighzVolumesClassified.h
DssVtpHighzVolumesClassified/src/xml/: DssVtpHighzVolumesClassified.xml
DssVtpMaterialVolumesClassified/: CMakeLists.txt
DssVtpMaterialVolumesClassified/src/: ConnectToVTPMaterialVolumesClassified.h  DssVtpMaterialVolumesClassified.cxx  DssVtpMaterialVolumesClassified.h
DssVtpMaterialVolumesClassified/src/xml/: DssVtpMaterialVolumesClassified.xml
DssVtpScanTime/: CMakeLists.txt
DssVtpScanTime/src/: DssVtpScanTime.cxx  DssVtpScanTime.h
DssVtpScanTime/src/xml/: DssVtpScanTime.xml
EventAvroViewer/: CMakeLists.txt
EventAvroViewer/src/: AvroEventReader.h  EventAvroViewer.cxx  EventAvroViewer.h
EventAvroViewer/src/xml/: DSCOpenEventAvro.xml
GammaViewer/: CMakeLists.txt
GammaViewer/src/: GammaEpochReader.cxx  GammaEpochReader.h  LoadGeometryFile.h
GammaViewer/src/xml/: DSCConnectToGammaData.xml  DSCFiltersGUI.xml  LoadBinaryFile.xml
GeometryDriftTubeSection/: CMakeLists.txt
GeometryDriftTubeSection/src/: GeometryDriftTubeSection.cxx  GeometryDriftTubeSection.h  GeometryDriftTubeSection.xml
ImageFilters/: AnisotropicDiffusion.xml  CMakeLists.txt  ContinuousDilate3D.xml  ContinuousErode3D.xml  GaussianImageSmooth.xml  ImageLaplacian.xml  MedianImageFilter.xml
OutlierTubes/: CMakeLists.txt
OutlierTubes/src/: ConnectToZeroMQOutlierTubes.h  OutlierTubes.cxx  OutlierTubes.h
OutlierTubes/src/xml/: DSCConnectToOutlierTubes.xml
RateViewer/: CMakeLists.txt
RateViewer/src/: .GammaEpochReader.cxx.swp  ConnectToHitPulseData.h  LoadGeometryFile.cxx  RateViewer.cxx  RateViewer.h
RateViewer/src/xml/: DSCConnectToHitPulseData.xml  DSCFiltersGUI.xml  LoadBinaryFile.xml
ThroughTrackEventAvroViewer/: .ycm_extra_conf.py  CMakeLists.txt
ThroughTrackEventAvroViewer/src/: AvroTrackEventReader.h  ThroughTrackEventAvroViewer.cxx  ThroughTrackEventAvroViewer.h
ThroughTrackEventAvroViewer/src/xml/: DSCOpenParticleTrackEventAvro.xml
ThroughTrackEventViewer/: CMakeLists.txt
ThroughTrackEventViewer/src/: FilterDriftTubes.cxx  FilterDriftTubes.h  ThroughTrackEventViewer.cxx  ThroughTrackEventViewer.h  TrackManipulation.cxx  TrackManipulation.h
ThroughTrackEventViewer/src/xml/: CutTracks.xml  DSCConnectToTrajectory.xml  DSCFiltersGUI.xml  FilterTubes.xml
ThroughTrackViewer/: CMakeLists.txt
ThroughTrackViewer/src/: ConnectToZeroMQIncomingParticleTrack.h  IncomingTrackManipulation.cxx  IncomingTrackManipulation.h  ThroughTrackViewer.cxx  ThroughTrackViewer.h
ThroughTrackViewer/src/xml/: CutTracks.xml  DSCConnectToTracks.xml  DSCFiltersGUI.xml  LoadBinaryFile.xml
TrackEventTubePropertyViewer/: CMakeLists.txt
TrackEventTubePropertyViewer/src/: TrackEventTubePropertyViewer.cxx  TrackEventTubePropertyViewer.h
TrackEventTubePropertyViewer/src/xml/: DSCConnectToTrackEvents.xml
